edit password validator field

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -40,6 +40,6 @@
   "invalid_name": "يرجى إدخال اسم صحيح (أحرف فقط).",
   "email_required": "البريد الإلكتروني مطلوب.",
   "invalid_email": "يرجى إدخال بريد إلكتروني صحيح.",
-  "passwordTooShort": "كلمة المرور يجب ألا تقل عن 4 أحرف"
+  "password_too_short": "كلمة المرور يجب ألا تقل عن 4 أحرف"
 
 }
